--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -52,22 +52,22 @@
             align-self: center;
             border-radius: 20px 20px;
             margin-right: 15px;
-            
-            &-icon{
+
+            &-icon {
                 margin-right: 10px;
                 margin-left: 12px;
                 color: #cbcbcb;
                 width: 30px;
                 height: 35px;
             }
-            
-            &-input{
-               position: relative;
-               top: -5px;
-               font-family: "Montserrat", sans-serif;
-               color: #333333;
-               font-weight: 400;
-               width: 265px;
+
+            &-input {
+                position: relative;
+                top: -5px;
+                font-family: "Montserrat", sans-serif;
+                color: #333333;
+                font-weight: 400;
+                width: 265px;
             }
         }
 
@@ -98,7 +98,6 @@
                 color: #333333;
                 font-family: "Montserrat", sans-serif;
                 font-weight: 400;
-
             }
             &:focus {
                 outline: none;
@@ -125,17 +124,17 @@
     }
 }
 
-span.mat-option-text{
+span.mat-option-text {
     color: #333333;
 }
-.select-input{
-    color: #333333; 
+.select-input {
+    color: #333333;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     margin-top: 0px;
 }
 
-.form-select{
+.form-select {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -159,6 +158,7 @@ span.mat-option-text{
     padding: 12px;
     position: relative;
     width: 230px;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -170,7 +170,7 @@ span.mat-option-text{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    // padding: 4px 0px;
+    padding: 2px 0px;
 }
 
 .priority {
@@ -275,7 +275,6 @@ span.mat-option-text{
     }
 }
 
-
 input {
     border: none;
     border-radius: 0px 25px 25px 0px;
@@ -295,7 +294,7 @@ input {
     padding: 4px 8px;
     color: white;
     font-weight: 700;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     border-radius: 10px;
     margin-left: 8px;
 
