--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -69,9 +69,8 @@
       <mat-icon>settings</mat-icon>
     </button>
   </div>
-  <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
 
-  <div class="cards-container" *ngIf="evaluation$|async as evaluations">
+  <div class="cards-container" *ngIf="evaluation$|async as evaluations; else default">
     <div *ngFor="let item of evaluations" class="mat-elevation-z4"
       style="display: flex; flex-direction: column; width: 230px">
       <div class="box">
@@ -119,5 +118,10 @@
       </div>
     </div>
   </div>
+  <ng-template #default>
+    <div class="ms-default">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    </div>
+  </ng-template>
 
 </div>
