--- a/src/app/main/pages/spares/summary/summary.component.html
+++ b/src/app/main/pages/spares/summary/summary.component.html
@@ -141,7 +141,7 @@
             </mat-paginator>
         </ng-container>
         <ng-template #default>
-            <div class="default">
+            <div class="ms-default">
                 <mat-progress-bar mode="indeterminate"></mat-progress-bar>
             </div>
         </ng-template>
