--- a/src/app/main/pages/spares/replacements/replacements.component.scss
+++ b/src/app/main/pages/spares/replacements/replacements.component.scss
@@ -13,8 +13,11 @@
 .icon-add {
     color: #6200ee;
 }
+
 .body-container {
-    margin-top: 40px;
+    margin-top: 24px;
+    width: 100%;
+    overflow: auto;
 }
 
 table {
