:art: Spares - Spare check, Configurations

--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
@@ -14,7 +14,9 @@
     color: #6200ee;
 }
 .body-container {
-    margin-top: 40px;
+    margin-top: 24px;
+    padding: 16px;
+    background: white;
 }
 
 .checked-margin {
