--- a/src/app/main/pages/spares/replacements/replacements.component.html
+++ b/src/app/main/pages/spares/replacements/replacements.component.html
@@ -27,83 +27,83 @@
         </button>
     </div>
     <mat-divider></mat-divider>
-    <div class="body-container">
-        <div *ngIf="replacement$ |async; else default">
-            <table mat-table [dataSource]="replacementDataSource" matSort (matSortChange)="sortData($event)"
-                class="mat-elevation-z8">
 
-                <ng-container matColumnDef="createdAt">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Fecha </th>
-                    <td mat-cell *matCellDef="let element" class="ms-table__header"> {{(element.createdAt.seconds * 1000) |
-                        date : 'dd/MM/yy'}}
-                    </td>
-                </ng-container>
+    <div *ngIf="replacement$ |async; else default" class="body-container mat-elevation-z4">
+        <table mat-table [dataSource]="replacementDataSource" matSort (matSortChange)="sortData($event)">
 
-                <ng-container matColumnDef="replacedPart">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> N/P Reemplazado </th>
-                    <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.replacedPart}} </td>
-                </ng-container>
+            <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Fecha </th>
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{(element.createdAt.seconds *
+                    1000) |
+                    date : 'dd/MM/yy'}}
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="currentPart">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> N/P Actual </th>
-                    <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.currentPart}} </td>
-                </ng-container>
+            <ng-container matColumnDef="replacedPart">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> N/P Reemplazado
+                </th>
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.replacedPart}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Descripción </th>
-                    <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.description}} </td>
-                </ng-container>
+            <ng-container matColumnDef="currentPart">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> N/P Actual </th>
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.currentPart}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="kit">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Kit </th>
-                    <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.kit ? 'Si':'No'}} </td>
-                </ng-container>
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Descripción </th>
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.description}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="support">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Support </th>
-                    <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.support ? 'Si':'No'}} </td>
-                </ng-container>
+            <ng-container matColumnDef="kit">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Kit </th>
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.kit ? 'Si':'No'}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="createdBy">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
-                    <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
-                </ng-container>
+            <ng-container matColumnDef="support">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ms-table__header"> Support </th>
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{element.support ? 'Si':'No'}}
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="actions" stickyEnd>
-                    <th mat-header-cell *matHeaderCellDef class="ms-table__header">
-                        Acciones
-                    </th>
-                    <td mat-cell *matCellDef="let element; let i = index">
-                        <ng-container>
-                            <mat-menu #rawMenu="matMenu">
-                                <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
-                                    <mat-icon>edit</mat-icon>
-                                    Editar
-                                </button>
-                                <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)">
-                                    <mat-icon>delete</mat-icon>
-                                    Borrar
-                                </button>
-                            </mat-menu>
+            <ng-container matColumnDef="createdBy">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
+                <td mat-cell *matCellDef="let element"> {{element.createdBy.name}} </td>
+            </ng-container>
 
-                            <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                                <mat-icon>more_vert</mat-icon>
+            <ng-container matColumnDef="actions" stickyEnd>
+                <th mat-header-cell *matHeaderCellDef class="ms-table__header">
+                    Acciones
+                </th>
+                <td mat-cell *matCellDef="let element; let i = index">
+                    <ng-container>
+                        <mat-menu #rawMenu="matMenu">
+                            <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
+                                <mat-icon>edit</mat-icon>
+                                Editar
                             </button>
-                        </ng-container>
-                    </td>
-                </ng-container>
+                            <button class="w3-small" mat-menu-item (click)="openDialog('delete',element,i)">
+                                <mat-icon>delete</mat-icon>
+                                Borrar
+                            </button>
+                        </mat-menu>
 
-                <tr mat-header-row *matHeaderRowDef="replacementDisplayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: replacementDisplayedColumns;"></tr>
-            </table>
-            <mat-paginator #replacementPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]"
-                showFirstLastButtons>
-            </mat-paginator>
-        </div>
-        <ng-template #default>
-            <div class="ms-default">
-                <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-            </div>
-        </ng-template>
+                        <button mat-icon-button [matMenuTriggerFor]="rawMenu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                    </ng-container>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="replacementDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: replacementDisplayedColumns;"></tr>
+        </table>
+        <mat-paginator #replacementPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
+        </mat-paginator>
     </div>
+    <ng-template #default>
+        <div class="ms-default">
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </div>
+    </ng-template>
 </div>
