--- a/src/app/main/pages/spares/settings/settings.component.html
+++ b/src/app/main/pages/spares/settings/settings.component.html
@@ -1,114 +1,108 @@
-<div class="container">
-  <div class="header-container">
-    <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">settings</mat-icon>
-    <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Configuraciones</h1>
-
+<div class="ms-container">
+  <div class="ms-toolbar">
+    <mat-icon class="ms-toolbar__icon">settings</mat-icon>
+    <h1 class="ms-toolbar__title" [ngClass]="isMobile ? 'ms-toolbar__title--mobile' : 'ms-toolbar__title--desktop'">
+      Configuraciones</h1>
     <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
       id="fileInput2">
-    <button aria-label="add" mat-button class="btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()">
-      <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+    <button mat-stroked-button class="ms-toolbar__button" accept=".xls,.xlsx" (click)="fileInput2.click()"
+      [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
+      <mat-icon>add</mat-icon>
       SUBIR ARCHIVO
     </button>
   </div>
-  <div class="body-container">
-    <ng-container *ngIf="settingDataSource.data.length; else default">
-      <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-      <div style="overflow: auto;">
-        <table mat-table [dataSource]="settingDataSource" matSort class="mat-elevation-z8">
+  <mat-divider></mat-divider>
+  <div class="body-container mat-elevation-z4">
+    <div style="overflow: auto;">
+      <table mat-table [dataSource]="settingDataSource" matSort class="mat-elevation-z8">
 
-          <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Fecha </th>
-            <td mat-cell *matCellDef="let element" class="table__cell">
-              {{element.date | date:"dd/MM/yyyy"}}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Fecha </th>
+          <td mat-cell *matCellDef="let element" class="table__cell">
+            {{element.date | date:"dd/MM/yyyy"}}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="name" sticky>
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Nombre de Mejora </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name}} </td>
-          </ng-container>
-          <ng-container matColumnDef="component">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Componente </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component}} </td>
-          </ng-container>
-          <ng-container matColumnDef="model">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Modelo </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.model}} </td>
-          </ng-container>
+        <ng-container matColumnDef="name" sticky>
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Nombre de Mejora </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="component">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Componente </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component}} </td>
+        </ng-container>
+        <ng-container matColumnDef="model">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Modelo </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.model}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="media">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Media </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.media}} </td>
-          </ng-container>
+        <ng-container matColumnDef="media">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Media </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.media}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="quantity">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Cantidad </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity}} </td>
-          </ng-container>
+        <ng-container matColumnDef="quantity">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Cantidad </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.quantity}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="currentPart">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Actual </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.currentPart}} </td>
-          </ng-container>
+        <ng-container matColumnDef="currentPart">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Actual </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.currentPart}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="improvedPart">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Mejorado </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.improvedPart}} </td>
-          </ng-container>
+        <ng-container matColumnDef="improvedPart">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> N/P Mejorado </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.improvedPart}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Descripción </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description}} </td>
-          </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Descripción </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.description}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="stock">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Stock </th>
-            <td mat-cell *matCellDef="let element" class="table__cell"> {{element.stock}} </td>
-          </ng-container>
+        <ng-container matColumnDef="stock">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Stock </th>
+          <td mat-cell *matCellDef="let element" class="table__cell"> {{element.stock}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="availability">
-            <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Disponibilidad </th>
-            <td mat-cell *matCellDef="let element" class="table__cell">
-              {{element.availability | date:"dd/MM/yyyy"}}
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="availability">
+          <th mat-header-cell *matHeaderCellDef class="table__cell" mat-sort-header> Disponibilidad </th>
+          <td mat-cell *matCellDef="let element" class="table__cell">
+            {{element.availability | date:"dd/MM/yyyy"}}
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="actions" stickyEnd>
-            <th mat-header-cell *matHeaderCellDef class="table__cell">
-              Acciones
-            </th>
-            <td mat-cell *matCellDef="let raw; index as i" class="table__cell">
-              <button mat-icon-button class="w3-small" (click)="remove(i)">
-                <mat-icon>remove_circle</mat-icon>
-              </button>
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="actions" stickyEnd>
+          <th mat-header-cell *matHeaderCellDef class="table__cell">
+            Acciones
+          </th>
+          <td mat-cell *matCellDef="let raw; index as i" class="table__cell">
+            <button mat-icon-button class="w3-small" (click)="remove(i)">
+              <mat-icon>remove_circle</mat-icon>
+            </button>
+          </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="settingDisplayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: settingDisplayedColumns;"></tr>
-        </table>
-      </div>
-      <mat-paginator #settingPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
-      </mat-paginator>
-    </ng-container>
-    <ng-template #default>
-      <div class="default">
-        <span>
-          <mat-icon style="vertical-align: middle;">upload</mat-icon> Adjunte archivo
-        </span>
-      </div>
-    </ng-template>
-
-
+        <tr mat-header-row *matHeaderRowDef="settingDisplayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: settingDisplayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-paginator #settingPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+    </mat-paginator>
+    <div class="footer">
+      <button type="file" aria-label="add" mat-button class="footer__btn-close" (click)="clearDataTable()">
+        CANCELAR
+      </button>
+      <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="saveDataTable()"
+        [disabled]="!settingDataSource.data.length">
+        GUARDAR
+      </button>
+    </div>
   </div>
-
-  <div class="footer">
-    <button type="file" aria-label="add" mat-button class="footer__btn-close" (click)="clearDataTable()">
-      CANCELAR
-    </button>
-    <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="saveDataTable()" [disabled]="!settingDataSource.data.length">
-      GUARDAR
-    </button>
-  </div>
-
+  <ng-template #default>
+    <div class="ms-default">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    </div>
+  </ng-template>
 </div>
