--- a/src/app/main/pages/spares/settings/settings.component.scss
+++ b/src/app/main/pages/spares/settings/settings.component.scss
@@ -13,9 +13,13 @@
 .icon-add {
   color: #6200ee;
 }
+
 .body-container {
-  margin-top: 40px;
+  margin-top: 24px;
+  padding: 16px;
+  background: white;
 }
+
 table {
   width: 100%;
 }
