--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.html
@@ -5,11 +5,13 @@
             Revisión de repuestos</h1>
         <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".csv"
             id="fileInput2">
-        <button type="file" mat-stroked-button class="ms-toolbar__button" accept=".csv" (click)="fileInput2.click()">
+        <button type="file" mat-stroked-button class="ms-toolbar__button" accept=".csv" (click)="fileInput2.click()"
+            [ngClass]="isMobile ? 'ms-toolbar__button--mobile' : 'ms-toolbar__button--desktop'">
             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
             ADJUNTAR SIS
         </button>
-        <mat-form-field appearance="outline" class="ms-toolbar__search">
+        <mat-form-field appearance="outline" class="ms-toolbar__input"
+            [ngClass]="isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'">
             <mat-label>Buscar mejora</mat-label>
             <mat-icon matPrefix>search</mat-icon>
             <input matInput type="text" [formControl]="improvementControl" placeholder="Escribir..."
@@ -18,7 +20,7 @@
     </div>
     <mat-divider></mat-divider>
 
-    <div class="body-container">
+    <div class="body-container mat-elevation-z4">
         <h4 style="font-weight: bold;">Resultado de búsqueda</h4>
         <div *ngIf="singleCheckedPart; else default">
 
@@ -80,10 +82,11 @@
                 </span>
             </div>
         </ng-template>
+        <div class="footer">
+            <button mat-stroked-button class="ms-button" (click)="downloadXls()" [disabled]="dataSparePart.length < 1">
+                DESCARGAR
+            </button>
+        </div>
     </div>
-    <div class="footer">
-        <button mat-stroked-button class="ms-button" (click)="downloadXls()" [disabled]="dataSparePart.length < 1">
-            DESCARGAR
-        </button>
-    </div>
+
 </div>
